Fks 1633 (#14)
* FKS-1633 added role and membership start and end dates

* FKS-1633 code cleanup

* FKS-1633 code review

* FKS-1633 added extra null checks